force-app/main/default/objects/Survey_Response__c/Survey_Response__c.object-meta.xml
<CustomObject>
    <description>General object for accommodate the answer of the survey</description>
    <label>Survey_Response</label>
    <nameField>
        <displayFormat>Response-{0000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey_Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>