force-app/main/default/objects/Survey_Response__c/fields/Agent_Role_Flag__c.field-meta.xml
<CustomField>
    <fullName>Agent_Role_Flag__c</fullName>
    <formula>TEXT(Email_Sms_Log__r.Contact__r.Agent_Role_Code__c)</formula>
    <label>Agent Role Flag</label>
    <type>Text</type>
</CustomField>