force-app/main/default/objects/Survey_Response__c/fields/Answer_10__c.field-meta.xml
<CustomField>
    <fullName>Answer_10__c</fullName>
    <label>Answer 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>