force-app/main/default/objects/Survey_Response__c/fields/Answer_13__c.field-meta.xml
<CustomField>
    <fullName>Answer_13__c</fullName>
    <label>Answer 13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>