force-app/main/default/objects/Survey_Response__c/fields/Answer_5_AFI__c.field-meta.xml
<CustomField>
    <fullName>Answer_5_AFI__c</fullName>
    <formula>IF (
(Answer_5__c == &apos;0&apos;) ||
(Answer_5__c == &apos;1&apos;) ||
(Answer_5__c == &apos;2&apos;) ||
(Answer_5__c == &apos;3&apos;) ||
(Answer_5__c == &apos;4&apos;) ||
(Answer_5__c == &apos;5&apos;) ||
(Answer_5__c == &apos;6&apos;) ||
(Answer_5__c == &apos;7&apos;) ||
(Answer_5__c == &apos;8&apos;) ||
(Answer_5__c == &apos;9&apos;) ||
(Answer_5__c == &apos;10&apos;) ||
(Answer_5__c == &apos;11&apos;) 
, Answer_8__c , Answer_5__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Answer 5 AFI</label>
    <type>Text</type>
</CustomField>