force-app/main/default/objects/Survey_Response__c/fields/Answer_Index_12__c.field-meta.xml
<CustomField>
    <fullName>Answer_Index_12__c</fullName>
    <label>Answer Index 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>