force-app/main/default/objects/Survey_Response__c/fields/Answer_Report_1__c.field-meta.xml
<CustomField>
    <fullName>Answer_Report_1__c</fullName>
    <description>answer report 1</description>
    <formula>IF(Answer_1__c = &quot;0&quot;, &quot;Completely Dissatisfied 0&quot;, 
 IF(Answer_1__c = &quot;1&quot;, &quot;Completely Dissatisfied 1&quot;, 
  IF(Answer_1__c = &quot;2&quot;, &quot;Completely Dissatisfied 2&quot;, 
   IF(Answer_1__c = &quot;3&quot;, &quot;Completely Dissatisfied 3&quot;,
    IF(Answer_1__c = &quot;4&quot;, &quot;Quite Dissatisfied 4&quot;, 
     IF(Answer_1__c = &quot;5&quot;, &quot;Quite Dissatisfied 5&quot;, 
      IF(Answer_1__c = &quot;6&quot;, &quot;Quite Dissatisfied 6&quot;,
       IF(Answer_1__c = &quot;7&quot;, &quot;Neither Satisfied nor Dissatisfied 7&quot;, 
        IF(Answer_1__c = &quot;8&quot;, &quot;Neither Satisfied nor Dissatisfied 8&quot;,
         IF(Answer_1__c = &quot;9&quot;, &quot;Quite Satisfied 9&quot;, 
          IF(Answer_1__c = &quot;10&quot;, &quot;Completely Satisfied 10&quot;, &apos;Others&apos;
          )
         )
        )
       )
      )
     )
    )
   )
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Answer Report 1</label>
    <type>Text</type>
</CustomField>