force-app/main/default/objects/Survey_Response__c/fields/Bottom_6__c.field-meta.xml
<CustomField>
    <fullName>Bottom_6__c</fullName>
    <formula>IF ( VALUE(Answer_6__c) &lt;=  6, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bottom 6</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>