force-app/main/default/objects/Survey_Response__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <formula>TEXT(Email_Sms_Log__r.Case__r.Case_Type_Config__c)</formula>
    <label>Case Type</label>
    <type>Text</type>
</CustomField>