force-app/main/default/objects/Survey_Response__c/fields/Category_Answer_4__c.field-meta.xml
<CustomField>
    <fullName>Category_Answer_4__c</fullName>
    <formula>IF(VALUE(Answer_4__c)&gt;=0 &amp;&amp;  VALUE(Answer_4__c)&lt;7,&apos;Detractor&apos;,
IF(VALUE(Answer_4__c)&gt;=7 &amp;&amp;  VALUE(Answer_4__c)&lt;9,&apos;Passive&apos;,
IF(VALUE(Answer_4__c)&gt;=9 &amp;&amp;  VALUE(Answer_4__c)&lt;11,&apos;Promoter&apos;,&apos;&apos;)))</formula>
    <label>Category Answer 4</label>
    <type>Text</type>
</CustomField>