force-app/main/default/objects/Survey_Response__c/fields/Consent_Answer__c.field-meta.xml
<CustomField>
    <fullName>Consent_Answer__c</fullName>
    <label>Consent Answer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Setuju</fullName>
            </value>
            <value>
                <fullName>Tidak Setuju</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>