force-app/main/default/objects/Survey_Response__c/fields/Email_Sms_Log__c.field-meta.xml
<CustomField>
    <fullName>Email_Sms_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email &amp; SMS Log</label>
    <referenceTo>Email_SMS_Log__c</referenceTo>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>