force-app/main/default/objects/Survey_Response__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <formula>TEXT(Email_Sms_Log__r.Entity__c)</formula>
    <label>Entity</label>
    <type>Text</type>
</CustomField>