force-app/main/default/objects/Survey_Response__c/fields/isQualtrics__c.field-meta.xml
<CustomField>
    <fullName>isQualtrics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isQualtrics</label>
    <type>Checkbox</type>
</CustomField>