force-app/main/default/objects/Survey_Response__c/fields/Negative_Answer__c.field-meta.xml
<CustomField>
    <fullName>Negative_Answer__c</fullName>
    <label>Negative Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>