force-app/main/default/objects/Survey_Response__c/fields/Negative_Flag__c.field-meta.xml
<CustomField>
    <fullName>Negative_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negative</label>
    <type>Checkbox</type>
</CustomField>