force-app/main/default/objects/Survey_Response__c/fields/Negative_Result__c.field-meta.xml
<CustomField>
    <fullName>Negative_Result__c</fullName>
    <formula>if (Negative_Question__c == &apos;1&apos;, 
(
   IF (Value(Answer_Index_1__c)  &lt; Value(Negative_Answer__c), TRUE, FALSE) 
),
if (Negative_Question__c == &apos;2&apos;,  
(
OR (IF (Value(Answer_Index_1__c)  &lt; Value(Negative_Answer__c), TRUE, FALSE),
   IF (Value(Answer_Index_2__c)  &lt; Value(Negative_Answer__c), TRUE, FALSE))
),
if (Negative_Question__c == &apos;3&apos;,
(
OR (IF (Value(Answer_Index_1__c)  &lt; Value(Negative_Answer__c), TRUE, FALSE),
   IF (Value(Answer_Index_2__c)  &lt; Value(Negative_Answer__c), TRUE, FALSE),
   IF (Value(Answer_Index_3__c)  &lt; Value(Negative_Answer__c), TRUE, FALSE))
),
if (Negative_Question__c == &apos;4&apos;,
(
OR (IF (Value(Answer_Index_1__c)  &lt; Value(Negative_Answer__c), TRUE, FALSE),
   IF (Value(Answer_Index_2__c)  &lt; Value(Negative_Answer__c), TRUE, FALSE),
   IF (Value(Answer_Index_3__c)  &lt; Value(Negative_Answer__c), TRUE, FALSE),
   IF (Value(Answer_Index_4__c)  &lt; Value(Negative_Answer__c), TRUE, FALSE))
),
if (Negative_Question__c == &apos;5&apos;,
(
OR (IF (Value(Answer_Index_1__c)  &lt; Value(Negative_Answer__c), TRUE, FALSE),
   IF (Value(Answer_Index_2__c)  &lt; Value(Negative_Answer__c), TRUE, FALSE),
   IF (Value(Answer_Index_3__c)  &lt; Value(Negative_Answer__c), TRUE, FALSE),
   IF (Value(Answer_Index_4__c)  &lt; Value(Negative_Answer__c), TRUE, FALSE),
   IF (Value(Answer_Index_5__c)  &lt; Value(Negative_Answer__c), TRUE, FALSE))
),
if (Negative_Question__c == &apos;7&apos;, Negative_Flag__c,
FALSE))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negative Result</label>
    <type>Checkbox</type>
</CustomField>