force-app/main/default/objects/Survey_Response__c/fields/Netral_6__c.field-meta.xml
<CustomField>
    <fullName>Netral_6__c</fullName>
    <formula>IF ( VALUE(Answer_6__c) == 7 || VALUE(Answer_6__c) == 8, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netral 6</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>