force-app/main/default/objects/Survey_Response__c/fields/Question_15__c.field-meta.xml
<CustomField>
    <fullName>Question_15__c</fullName>
    <label>Question 15</label>
    <length>255</length>
    <type>Text</type>
</CustomField>