force-app/main/default/objects/Survey_Response__c/fields/Question_Id_12__c.field-meta.xml
<CustomField>
    <fullName>Question_Id_12__c</fullName>
    <label>Question Id 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>