force-app/main/default/objects/Survey_Response__c/fields/Response_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Response_DateTime__c</fullName>
    <formula>CreatedDate</formula>
    <label>Response DateTime</label>
    <type>DateTime</type>
</CustomField>