force-app/main/default/objects/Survey_Response__c/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <formula>IF(
  CreatedDate - Email_Sms_Log__r.CreatedDate &gt; 0 ,
  TEXT( FLOOR( CreatedDate - Email_Sms_Log__r.CreatedDate ) ) &amp; &quot; days &quot;
  &amp; TEXT( FLOOR( MOD( (CreatedDate - Email_Sms_Log__r.CreatedDate ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
  &amp; TEXT( ROUND( MOD( (CreatedDate - Email_Sms_Log__r.CreatedDate ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time</label>
    <type>Text</type>
</CustomField>