force-app/main/default/objects/Survey_Response__c/fields/Survey_Send_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Survey_Send_DateTime__c</fullName>
    <formula>Email_Sms_Log__r.CreatedDate</formula>
    <label>Survey Send DateTime</label>
    <type>DateTime</type>
</CustomField>