force-app/main/default/objects/Survey_Response__c/fields/SurveyTaker__c.field-meta.xml
<CustomField>
    <fullName>SurveyTaker__c</fullName>
    <label>SurveyTaker</label>
    <referenceTo>SurveyTaker__c</referenceTo>
    <relationshipName>Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>