force-app/main/default/objects/Survey_Response__c/fields/Top_6__c.field-meta.xml
<CustomField>
    <fullName>Top_6__c</fullName>
    <formula>IF ( VALUE(Answer_6__c) == 9 || VALUE(Answer_6__c) == 10, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Top 6</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>