force-app/main/default/objects/Survey_Response__c/fields/WelcomeCall_Address_1__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Address_1__c</fullName>
    <label>Address 1</label>
    <length>24</length>
    <type>Text</type>
</CustomField>