force-app/main/default/objects/Survey_Response__c/fields/WelcomeCall_Call_Line__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Call_Line__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Call Line</label>
    <referenceTo>Call_Line__c</referenceTo>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>