force-app/main/default/objects/Survey_Response__c/fields/WelcomeCall_Email__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>