force-app/main/default/objects/Survey_Response__c/fields/WelcomeCall_Note__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Note__c</fullName>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>