force-app/main/default/objects/Survey_Response__c/fields/WelcomeCall_Others__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Others__c</fullName>
    <label>Others</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>