force-app/main/default/objects/Survey_Response__c/fields/WelcomeCall_Section__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Section__c</fullName>
    <label>Section</label>
    <length>100</length>
    <type>Text</type>
</CustomField>