force-app/main/default/objects/Survey_Response__c/fields/WelcomeCall_Tab__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Tab__c</fullName>
    <label>Tab</label>
    <length>100</length>
    <type>Text</type>
</CustomField>