force-app/main/default/objects/Survey_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Survey__c</columns>
    <columns>SurveyTaker__c</columns>
    <columns>Email_Sms_Log__c</columns>
    <columns>Question_1__c</columns>
    <columns>Answer_1__c</columns>
    <columns>Question_2__c</columns>
    <columns>Answer_2__c</columns>
    <columns>Negative_Answer__c</columns>
    <columns>Negative_Question__c</columns>
    <columns>Negative_Result__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>